<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:title="User"
            app:titleTextColor="@color/black"
            app:navigationIcon="@drawable/img_arrow_left" />
        <TextView
            android:id="@+id/user_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User Profile"
            android:gravity="center"
            android:fontFamily="@font/nunito_black"
            android:textSize="20dp"
            android:layout_below="@+id/profile_toolbar"/>
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"
            android:layout_marginTop="20dp"
            android:layout_below="@id/user_header"/>

        <TextView
            android:id="@+id/user_name_1"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_below="@id/user_username"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:text="{name}" />

        <TextView
            android:id="@+id/user_dob_1"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_below="@id/user_name_1"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:inputType="datetime"
            android:padding="15dp"
            android:paddingTop="20dp"
            android:text="{dob}" />
        <EditText
            android:id="@+id/user_email_1"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_dob_1"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:text="{email}"
            android:padding="15dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/user_username"
            android:layout_width="380dp"
            android:layout_height="55dp"
            android:layout_below="@id/user_avatar"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:padding="15dp"
            android:paddingTop="20dp"
            android:text="{username}"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_edit_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_log"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:layout_below="@+id/user_email_1"/>
<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/profile_save_btn"-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@drawable/button_log"-->
<!--            android:text="@string/save"-->
<!--            android:textColor="@color/white"-->
<!--            android:fontFamily="@font/nunito_bold"-->
<!--            android:textAllCaps="false"-->
<!--            android:textSize="20dp"-->
<!--            android:layout_below="@+id/user_email"-->
<!--            android:layout_toRightOf="@id/profile_edit_btn"/>-->
    </RelativeLayout>
</ScrollView>