...
        android:title="" />
    <item
        android:id="@+id/menu_tab"
        android:icon="@drawable/selector_navbar_menu"
        android:title="" />
    <item
        android:id="@+id/user_tab"
        android:icon="@drawable/selector_navbar_user"
        android:title="" />
</menu>
